--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
         <!--Main content-->
         <article>
             <h1>404 Not found</h1>
-            <p><strong>We're working on it!!!!</strong></p>
+            <p><strong>I'm working on it!!!!</strong></p>
         </article>
         <!--Footer-->
         <footer>
