--- a/articles.html
+++ b/articles.html
@@ -45,7 +45,7 @@
         <article>
             <h1>Articles</h1>
             <ul>
-                <li><a href="/hatred.html">Unordered list of things we hate</a><br>
+                <li><a href="/hatred.html">Unordered list of things I hate</a><br>
                 Rather petty... Nobody cares about this one.</li>
                 <li><a href="/dreamie.html">That one Neocities user</a><br>
                 A retrospective on the bizarre dreamie drama (AKA the great Neocities war of 2022).</li>
