--- a/comics.html
+++ b/comics.html
@@ -47,12 +47,12 @@
             <p>Mind the content warnings.</p>
             <ul>
                 <li><a href="/comics/fingers.html">Fingers</a><br>
-                A deeply personal 16-page comic about us trying to process trauma.<br>
+                A deeply personal 16-page comic about trying to process trauma.<br>
                 <strong>CW: CSA, self-harm</strong></li>
                 <li><a href="/comics/hazbin.html">Hazbin Hotel fancomics</a><br>
                 Strips based on Hazbin Hotel (usually RadioDust). Mostly humorous.</li>
                 <li><a href="/comics/weirdcorpse.html">Weird Corpse</a><br>
-                <em>Cadavre exquis</em> we made in collaboration with <a href="https://mortalsins.neocities.org/">Patrick</a>. We didn't have a drawing tablet at the time, so our part is noticeably badly-drawn.<br>
+                <em>Cadavre exquis</em> I made in collaboration with <a href="https://mortalsins.neocities.org/">Patrick</a>. We didn't have a drawing tablet at the time, so our part is noticeably badly-drawn.<br>
                 <strong>CW: eye trauma, gore</strong></li>
                 <li><a href="/comics/misc.html">Miscellaneous comics</a><br>
                 Vent art in the form of short strips.<br>
