--- a/freebies.html
+++ b/freebies.html
@@ -45,6 +45,7 @@
         <article>
             <h1>Free graphics</h1>
             <p>Some of these are <em>old</em>. Like, early-mid 2010s, namely most badges and stamps.</p>
+            <p>Please credit with a link to this page if you use any of these.</p>
             <ul>
                 <li><a href="#sozai">Sozai</a></li>
                 <li><a href="#adoptables">Web adoptables</a></li>
