--- a/funger.html
+++ b/funger.html
@@ -77,14 +77,14 @@
         <!--Introduction-->
         <h1>A terrifying presence has entered the room...</h1>
         <p><em>Fear and Hunger</em> is a series of dark fantasy games made in the RPGMaker engine. There are two games in the series, both solely developed by Miro Haverinen, and both are known for their unrelenting difficulty and seemingly unfair nature.</p>
-        <p>However, we'd argue the games are not entirely unfair, because you're not meant to understand them fully the first few times you play them. We believe the games are much more enjoyable if you approach them as you would approach a <em>puzzle</em>- you'll learn about the mechanics as you play more and more, and chances are you'll be immersed in a deeply fascinating world as well.</p>
+        <p>However, I'd argue the games are not entirely unfair, because you're not meant to understand them fully the first few times you play them. I believe the games are much more enjoyable if you approach them as you would approach a <em>puzzle</em>- you'll learn about the mechanics as you play more and more, and chances are you'll be immersed in a deeply fascinating world as well.</p>
         <p>That's not to say it's everyone's cup of tea- far from it, in fact. Not only will the lack of even a basic tutorial drive away some players, it contains a lot of topics a lot of people can't stomach well (such as gore, graphic nudity, sexual violence, drug use, and more).</p>
         <p>If those things don't deter you, why not give it a chance?</p>
         <!--Experience-->
         <h2>Our experience</h2>
-        <p>We're not afraid to admit we were introduced to the series the same way many others were- by watching video essays on it on Youtube. We like to think our experience is slightly more interesting than that though, simply because of how the games (especially the first one) would not leave our mind ever since we learned about their existence.</p>
-        <p>For a few weeks, we'd think about their complexities, dream about their creatures... It became quite the obsession, even though we didn't watch more than 3 videos on the subject back then. We ended up buying both games on June 24th, 2023.</p>
-        <p>To our surprise, we weren't deterred by its difficulty, nor frustrated by each loss (then again, we aren't ones to get angry at video games often).</p>
+        <p>I'm not afraid to admit I was introduced to the series the same way many others were- by watching video essays on it on Youtube. I like to think my experience is slightly more interesting than that though, simply because of how the games (especially the first one) would not leave my mind ever since I learned about their existence.</p>
+        <p>For a few weeks, I'd think about their complexities, dream about their creatures... It became quite the obsession, even though I didn't watch more than 3 videos on the subject back then. I ended up buying both games on June 24th, 2023.</p>
+        <p>To our surprise, I wasn't deterred by its difficulty, nor frustrated by each loss (then again, I am not one to get angry at video games often).</p>
         <!--Favorite-->
         <h2>Favorites</h2>
         <ul>
@@ -100,7 +100,7 @@
         <img src="/images/funger/white-ass.jpg" alt="Image of the Girl from Fear and Hunger 1 with text reading «Can you take my white ass to the God of the Depth»" style="width: 290px;">
         <img src="/images/funger/bae.jpg" alt="Image of Cahara and Enki reading «Fuck Tinder, I met bae on [image of the dungeons of Fear and Hunger]»" style="width: 290px;">
         <img src="/images/funger/rantsona.jpg" alt="Parody of a video called «Why We Should Bring Back Child Labor» with Pocketcat as its rantsona" style="width: 290px;">
-        <p>Here's ours too:</p>
+        <p>Here's mine too:</p>
         <img src="/images/funger/dark.png" alt="Grind message with a picture of a hand pointing to the entrance of the basement in Fear and Hunger 1, demanding to «go in the dark»" style="width: 290px;">
     </main>
 </body>
