--- a/hatred.html
+++ b/hatred.html
@@ -43,8 +43,8 @@
         </nav>
         <!--Main content-->
         <article>
-            <h1>Unordered list of things we hate</h1>
-            <p>Pettiness keeps us young, which is why everyone confuses us for a teenager. Do us a favor and don't take these too seriously.</p>
+            <h1>Unordered list of things I hate</h1>
+            <p>Pettiness keeps me young, which is why everyone confuses me for a teenager. Do me a favor and don't take these too seriously.</p>
             <ul>
                 <li>Webcore and Webcore-likers.</li>
                 <li>Minors on social media;</li>
