--- a/linkroll.html
+++ b/linkroll.html
@@ -39,12 +39,12 @@
                     <a href="/tamagotchi.html">Tamagotchi graveyard</a>
                 </div>
             </div>
-            <a href="https://yourdevilfriends.123guestbook.com/">Guestbook</a>
+            <a href="https://ymydevilfriends.123guestbook.com/">Guestbook</a>
         </nav>
         <!--Main content-->
         <article>
             <h1>Linkroll</h1>
-            <p>Some of our favorite sites! We couldn't put every cool link we know of because we have bookmarked over 400 of those.</p>
+            <p>Some of my favorite sites! I couldn't put every cool link I know of because I have bookmarked over 400 of those.</p>
             <!--Friends-->
             <h3>Friends of the site</h3>
             <p class="center">
@@ -148,7 +148,7 @@
                 <br>
                 <a href="https://web.archive.org/web/20140923060525/http://invisiblegames.net/">Invisible Games</a> ·
                 <a href="https://web.archive.org/web/20091020220020/http://geocities.com/TelevisionCity/Stage/7140/psyadventures.html">Psyadventures</a> ·
-                <a href="https://web.archive.org/web/20170901003557/http://www.patrickcrusade.org/">Open Your Mind</a>
+                <a href="https://web.archive.org/web/20170901003557/http://www.patrickcrusade.org/">Open Ymy Mind</a>
                 <br>
                 <a href="https://web.archive.org/web/20030409155408/http://disenchantedforest.com:80/code/">Multiple Code</a> ·
                 <a href="https://web.archive.org/web/20090803150523/http://geocities.com/MissFarnaby/contents.html">Miss Farnaby</a>
