--- a/poems.html
+++ b/poems.html
@@ -44,7 +44,7 @@
         <!--Main content-->
         <article>
             <h1>Poems</h1>
-            <p>We're not the best at poetry, but we hope you enjoy these regardless.</p>
+            <p>I'm not the best at poetry, but I hope you enjoy these regardless.</p>
             <ul>
                 <li><a href="/poetry/the-king.html">The King</a></li>
                 <li><a href="/poetry/the-fall.html">The fall</a></li>
