--- a/shrines.html
+++ b/shrines.html
@@ -44,7 +44,7 @@
         <!--Main content-->
         <article>
             <h1>Shrines</h1>
-            <p>Like most people, we enjoy a good piece of media. Here are pages dedicated to some of our favorites.</p>
+            <p>Like most people, I enjoy a good piece of media. Here are pages dedicated to some of my favorites.</p>
             <ul>
                 <li><a href="/funger.html">Fear and Hunger</a></li>
             </ul>
