--- a/about.html
+++ b/about.html
@@ -45,30 +45,33 @@
         <article>
             <!--The site-->
             <h2>About <span class="rainbow">yourdevilfriends.art</span></h2>
-            <p>This website was made because we bought a domain on a whim and figured we'd give it some use.</p>
+            <p>This website was made because I bought a domain on a whim and figured I'd give it some use.</p>
             <p>It's hosted on GitHub (<a href="https://yourdevilfriends.neocities.org/">Neocities mirror</a>), entirely hand-coded and built in the simplest fucking way possible.</p>
-            <p>Made for fun and for the love of the indie Web, it's run by two <strong class="rainbow">Webmasters</strong> from the same <a href="https://morethanone.info/" target="_blank">system</a>.</p>
             <!--The Webmasters-->
-            <h2>About the <span class="rainbow">Webmasters</span></h2>
-            <p>As previously stated, we're both part of a system, one collectively known as <strong class="rainbow">devils</strong> (or Bruno, if you'd prefer a normal name). Two of us run this site, though our unique names are kind of unimportant since we front together all the time anyways.</p>
-            <p>He/him or plural they/them.</p>
-            <p>We're schizophrenic, which can impact the way we interact with others a lot. We tend to isolate ourselves and sometimes say things that come off as strange.</p>
-            <p>Despite that, we love to interact with others. Feel free to reach out!</p>
+            <h2>About the <span class="rainbow">Webmaster</span></h2>
+            <p>In short:</p>
+            <ul>
+                <li>Name: devils/Bruno</li>
+                <li>Age: 25 years</li>
+                <li>Pronouns: he/they</li>
+                <li>Sex: ist</li>
+                <li>Location: Somewhere in Portugal</li>
+                <li>OS: EndeavourOS</li>
+                <li>Online since: 2007</li>
+            </ul>
             <!--Elsewhere-->
             <h3>Find us elsewhere</h3>
             <p>Some sites where we are active.</p>
             <ul>
-                <li><a href="https://mikumustdie.tumblr.com/" target="_blank">Reblog Tumblr</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art Tumblr</a></li>
-                <li><a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">MelonLand Forum</a></li>
-                <li><a href="https://www.moderneopets.com/userlookup/402" target="_blank">Moderneopets</a> & <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">Virtu.Pet</a></li>
-                <li>We also have some 18+ accounts, but we're not going to link them here</li>
+                <li><a href="https://mikumustdie.tumblr.com/">Reblog Tumblr</a> & <a href="https://yourdevilfriends.tumblr.com/">art Tumblr</a></li>
+                <li><a href="https://aethy.com/@yourdevilfiends">Personal/18+ Mastodon</a> & <a href="https://blorbo.social/@yourdevilfriends">SFW alt</a></li>
             </ul>
             <!--Other projects-->
             <h3>Other Web projects</h3>
             <p class="center">
                 <a href="https://for-normal-people.neocities.org/"><img src="/images/buttons/for-normal-people.png" alt="for normal people"></a>
                 <br>
-                Hub for things related to our dead dove OCs.
+                Hub for things related to my dead dove OCs.
                 <br><br>
                 <a href="https://www.moderneopets.com/~14677"><img src="/images/buttons/mn_species.gif" alt="Moderneopets custom species guide"></a>
                 <br>
