--- a/dreamie.html
+++ b/dreamie.html
@@ -45,11 +45,11 @@
         <article>
             <h1>That one Neocities user</h1>
             <p>Where there's a large community, there's bound to be drama. This is true for both online and offline life- large groups of people are bound to have a few bad apples and people who disagree.</p>
-                <p>In this post, we'd like to bring you back to the summer of 2022, specifically within the Neocities community, and go over the most bizarre drama we've seen on that site. It involves people who we're friends or acquainted with, ourselves for the briefest time, a bunch of kids for no fucking good reason, and a strange user going by <em>dreamie</em>.</p>
-                <p>Now, dreamie frequently hopped from pronoun set to pronoun set- which is not bad in itself- as a way to switch goal posts and deflect criticisms by accusing other of misgendering them. As such, we have no fucking clue which pronouns they use... so, we're sticking with «they/them» since that's usually a safe bet.</p>
-                <p>Besides that, the proof of a lot of these things has not been properly archived or happened in deleted Discord servers, so while you may take these accusations with a pinch of salt, please do keep in mind that what we say here would be said by most who used Neocities at the time. All we're saying is... where there's smoke, there's fire.</p>
+                <p>In this post, I'd like to bring you back to the summer of 2022, specifically within the Neocities community, and go over the most bizarre drama I've seen on that site. It involves people who we're friends or acquainted with, myself for the briefest time, a bunch of kids for no fucking good reason, and a strange user going by <em>dreamie</em>.</p>
+                <p>Now, dreamie frequently hopped from pronoun set to pronoun set- which is not bad in itself- as a way to switch goal posts and deflect criticisms by accusing other of misgendering them. As such, I have no fucking clue which pronouns they use... so, I'm sticking with «they/them» since that's usually a safe bet.</p>
+                <p>Besides that, the proof of a lot of these things has not been properly archived or happened in deleted Discord servers, so while you may take these accusations with a pinch of salt, please do keep in mind that what I say here would be said by most who used Neocities at the time. All I'm saying is... where there's smoke, there's fire.</p>
                 <p>If the screenshots look small, you can click them to view them in their full size.</p>
-                <p>As a final introductory note, if you notice we're incorrect about something, feel free to let us know so we can fix that.</p>
+                <p>As a final introductory note, if you notice I'm incorrect about something, feel free to let me know so I can fix that.</p>
                 <p><strong>Content warning:</strong> extremely online stupidity</p>
                 <h3>Table of contents</h3>
                 <ol>
@@ -84,8 +84,8 @@
                 <p>They first got notoriety by «calling out» a genuine pedophile and consequently ruining any chance of them getting any real-life consequences for their actions- that's a whole 'nother story in which not all parties involved are comfortable sharing the details, so we'll leave it at that. We're mainly referring to this for context.</p>
                 <p>After derailing the catching of a predator by «exposing» her, it should come as no surprise to learn that they had a bit of a savior complex- suddenly, a whole lotta people were groomers and pedophiles based on... fictional ships and a GIF that was sent as a joke (of Goku's feet) among teenagers...?</p>
                 <p>Yeah, okay, that was just fucking ridiculous. Even worse, it was a bit of an open secret that they were in direct contact with kids (really young too, think 12-14 years old) as someone in their 20s. This alone would be pretty creepy, but what was truly vile was the fact that they manipulated these kids into being their white knights, dragging them into drama and discourse about things kids that young should not be exposed to. It's a pretty clear example of non-sexual grooming, whether dreamie or the victims themselves realize it.</p>
-                <p>They often lied about other users, and we've experienced this first-hand. It's a bit of a minor incident, but we figured we'd mention it just so you get an idea of their pattern of behavior.</p>
-                <p>We said something about how they <a href="/images/article-images/what.png">watermarked someone else's <em>selfie</em></a> to put it on their site- needless to say, that crumb of criticism drove them up the wall. They blocked us, which is fair, but then proceeded to vaguepost about us (even though they stated they didn't vaguepost at all). We're all for respecting people's boundaries, but considering they had already stalked two of our friends and more people as well, we figured we'd leave a final message. Cue a shit-flinging contest:</p>
+                <p>They often lied about other users, and I've experienced this first-hand. It's a bit of a minor incident, but I figured I'd mention it just so you get an idea of their pattern of behavior.</p>
+                <p>I said something about how they <a href="/images/article-images/what.png">watermarked someone else's <em>selfie</em></a> to put it on their site- needless to say, that crumb of criticism drove them up the wall. They blocked me, which is fair, but then proceeded to vaguepost about me (even though they stated they didn't vaguepost at all). I'm all for respecting people's boundaries, but considering they had already stalked two of our friends and more people as well, I figured I'd leave a final message. Cue a shit-flinging contest:</p>
                 <a href="/images/article-images/our-cameo.png">
                     <img src="/images/article-images/our-cameo.png" class="center" alt="Screenshot of an online argument. It reads:
                     Us: Hey, @tumor. If you're gonna talk shit about us over a singular crumb of criticism, at least have the decency to @ us next time.
@@ -99,13 +99,13 @@
                     77heaven: except for on your onlinedevil account, where you were repeatedly disgusting and hostile towards me and others. you guys are fucking clowns. go back to making out with each other and stay the fuck off of my page
                     Us: «Repeatedly disgusting and hostile» AKA we poked fun of you for sending death threats to other users. Just so we're clear.">
                 </a>
-                <p>They proceeded to claim we said they should off themselves, something we didn't do either publicly or privately, and were dead-set on convincing us and others we had done so in a manner that came a bit too close to gaslighting for our tastes. Mind you, it didn't work, though we still made sure we hadn't said nothing of the sort.</p>
+                <p>They proceeded to claim I said they should off themselves, something I didn't do either publicly or privately, and were dead-set on convincing us and others we had done so in a manner that came a bit too close to gaslighting for my taste. Mind you, it didn't work, though I still made sure I hadn't said nothing of the sort.</p>
                 <p>These kinds of arguments could go on for a while. To be fair, dreamie was fun to poke fun of because of their over-reactions and honestly idiotic ramblings and because everyone and their grandmother was sick of their shit. Want an example? Well, here you go:</p>
                 <figure class="center">
                     <video src="/etc/neocities-simulator.mp4" type="video/mp4" controls></video>
                     <figcaption>Thank you <a href="https://feelingmachine.moe/" target="_blank">Neph</a> for the cinematic masterpiece</figcaption>
                 </figure>
-                <p>They also threw a tantrum over an alterhuman webring, calling its owner (who is psychotic) sanist for no good reason. No, we are not kidding:</p>
+                <p>They also threw a tantrum over an alterhuman webring, calling its owner (who is psychotic) sanist for no good reason. No, I am not kidding:</p>
                 <figure class="center">
                     <a href="/images/article-images/alterhuman-1.png"><img src="/images/article-images/alterhuman-1.png" alt="Neocities status post by dreamie reading:
                         will be renewing my efforts on the alterbeing webring in a bit ^_^"></a>
@@ -120,8 +120,8 @@
                 </figure>
                 <!--Proof-->
                 <h2 id="proof">How we know they lied</h2>
-                <p>Their most egregious lies were about their race, so we'll mainly focus on that.</p>
-                <p>A few anonymous users (we're fairly certain they're anonymous since this information mostly comes from lolcow.farm) did some digging, and boy howdy did they find gold. Here's how it all went down:</p>
+                <p>Their most egregious lies were about their race, so I'll mainly focus on that.</p>
+                <p>A few anonymous users (I'm fairly certain they're anonymous since this information mostly comes from lolcow.farm) did some digging, and boy howdy did they find gold. Here's how it all went down:</p>
                 <ol>
                     <li>After finding one of dreamie's old Tumblr blogs, users noticed it led to a DeviantArt account. In said account, various stamps were favorited, and some of those stamps were featured in the blog they had at the time (corpsetrait).</li>
                     <li>A Toyhou.se profile that used the same username as the DeviantArt account was found, and included an OC named Seth Elmas Fitzroy. The character's name and design was also featured in corpsetrait.</li>
@@ -134,23 +134,23 @@
                     <img src="/images/article-images/gay-vampire.jpg" alt="Selfie of a red-haired pale white person">
                     <figcaption>You might want to go outside to fix that snow white complexion.</figcaption>
                 </figure>
-                <p>... Dude, we're tanner than that by simply going out. Where are their ethnic features, which totally got them kicked out of homeless shelters when they weren't in their seven room apartment? Who knows!</p>
-                <p>Their other lies (various users being predators or racist or transphobic or whatever, us telling them to kill themselves, God knows what else) were exaggerated at best and fabricated at worst. There was never any concrete proof of anything they claimed.</p>
+                <p>... Dude, I'm tanner than that by simply going out everyday. Where are their ethnic features, which totally got them kicked out of homeless shelters when they weren't in their seven room apartment? Who knows!</p>
+                <p>Their other lies (various users being predators or racist or transphobic or whatever, me telling them to kill themselves, God knows what else) were exaggerated at best and fabricated at worst. There was never any concrete proof of anything they claimed.</p>
                 <!--The now-->
                 <h2 id="now">What now?</h2>
-                <p>What happened to dreamie? Well, after some light digging on Discord we found a now-protected Twitter account that likely belongs to them. However, we won't mention their handle since not only do we not have confirmation that they are the same person, that account had a <em>lot</em> of triggering content and shotacon porn. So much for calling anyone that veered slightly against art censorship a predatory «proshitter», we suppose...</p>
+                <p>What happened to dreamie? Well, after some light digging on Discord me and a few buddies found a now-protected Twitter account that likely belongs to them. However, I won't mention their handle since not only do I not have confirmation that they are the same person, that account had a <em>lot</em> of triggering content and shotacon porn. So much for calling anyone that veered slightly against art censorship a predatory «proshitter», I suppose...</p>
                 <p>We can laugh at how ridiculous this whole ordeal was, though it's also pretty sad to know that lots of people were genuinely hurt by them. Users on Neocities, Tumblr, etc., they were manipulated into siding with them, and the many kids who were in contact with them are probably still very hurt by that.</p>
-                <p>A lesson was learned by many: don't just trust everyone on the Internet, regardless of how nice they are to you (there really should be mandatory classes on Internet safety at this point). As for dreamie, we'd say they would have learned not to lie about their entire fucking identity but honestly we highly doubt that happened.</p>
+                <p>A lesson was learned by many: don't just trust everyone on the Internet, regardless of how nice they are to you (there really should be mandatory classes on Internet safety at this point). As for dreamie, I'd say they would have learned not to lie about their entire fucking identity but honestly I highly doubt that happened.</p>
                 <!--Special thanks-->
                 <h2 id="thanks">Special thanks and further reading</h2>
-                <p>Special thanks to our pals who had to deal with this weirdo and everyone who bullied them into leaving Neocities.</p>
-                <p>If you're equally as fascinated by this shitshow as we are, here's other some stuff related to dreamie (none of them are made by us):</p>
+                <p>Special thanks to my pals who had to deal with this weirdo and everyone who bullied them into leaving Neocities.</p>
+                <p>If you're equally as fascinated by this shitshow as I am, here's other some stuff related to dreamie (none of them are made by me):</p>
                 <ul>
                     <li><a href="https://neocities-users.dreamwidth.org/1289.html" target="_blank">The dreamie drama Dreamwidth post</a></li>
                     <li><a href="https://archive.ph/20221114082108/https://imgur.com/a/VZ55DEs" target="_blank">An archive of Discord screenshots</a></li>
                     <li><a href="https://archive.ph/YYRPZ" target="_blank">An archive of their Everskies shenanigans</a></li>
                 </ul>
-                <p>Thanks for reading this mess. Our sanity is dwindling.</p>
+                <p>Thanks for reading this mess. My sanity is dwindling.</p>
                 <img src="/images/article-images/death-row.png" class="center" alt="Meme featuring a white girl reading «Lullabye is a Neocities user. She is part of the first season of Neocities drama and was one of the first four Neocities users to be executed on death row after being convicted of eating her whole family.">
         </article>
         <!--Footer-->
