--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <article>
             <h1>Welcome to the devil's den.</h1>
             <p>You've reached <strong class="rainbow">yourdevilfriends.art</strong>, the home of devilishly good times.</p>
-            <p>Despite not containing outwardly explicit content, this site is maintained by adults and as such has an older audience in mind. <strong>Viewers should be 16 at the very least to browse safely.</strong></p>
+            <p>Despite not containing outwardly explicit content, this site is maintained by an adult and as such has an older audience in mind. <strong>Viewers should be 16 at the very least to browse safely.</strong></p>
             <p>If you get lost, you may at any point click the header to return to this page.</p>
             <p>We hope your enjoy your time here.</p>
             <!--Link back-->
