--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
         </nav>
         <main>
             <h2>Hello?</h2>
+            <img src="/images/paprika.gif" class="center">
             <p>Honestly, I think «about me» pages are kinda tacky, at least nowadays. Sure, in the indie Web niche they're a lot more unique, but most people boil themselves down to gender, pronouns, species, <em>et cetera</em>. Don't get me started on Carrd pages, with the nonsensical «do not interact» lists and so on. <em>Blech!</em></p>
             <p>So yeah, I made mine semi-hidden. I follow a strict content-first philosophy- basically, I think personal websites should be valued by the art, articles and so on they contain. Miss me with those pages that have so many GIFs that they lag your browser, yo.</p>
             <h2>anyways...</h2>
