--- a/gallery/misc2.html
+++ b/gallery/misc2.html
@@ -21,7 +21,7 @@
         </nav>
         <main>
             <a href="/images/art/comics/misc/strip02.jpg"><img src="/images/art/comics/misc/strip02.jpg"></a>
-            <p class="center"><a href="/gallery/misc1.html">Previous</a> · <a href="/gallery/misc3.html">Next</a></p>
+            <p class="center"><a href="/gallery/misc3.html">Next</a> · <a href="/gallery/misc1.html">Previous</a></p>
         </main>
         <footer>
             <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
