--- a/funger.html
+++ b/funger.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div id="contain">
-        <img src="/images/funger/header.gif" style="position: absolute; z-index: 0; top: 26px; left: 51%;">
+        <img src="/images/funger/header.gif" id="kitty">
         <header>
             <h1>the devils' den</h1>
         </header>
