--- a/tamagotchi.html
+++ b/tamagotchi.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div id="contain">
-        <img src="/images/tamagotchi/header.gif" style="position: absolute; z-index: 0; top: 26px; left: 55%;">
+        <img src="/images/tamagotchi/header.gif" id="kitty">
         <header>
             <h1>the devils' den</h1>
         </header>
