--- a/gallery/pixel2022.html
+++ b/gallery/pixel2022.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="contain">
-        <img src="/images/header.gif" style="position: absolute; z-index: 0; top: 26px; left: 55%;">
+        <img src="/images/header.gif" id="kitty">
         <header>
             <h1>the devils' den</h1>
         </header>
