--- a/funger.html
+++ b/funger.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div id="contain">
-        <img src="/images/funger/header.gif" id="kitty">
+        <img src="/images/funger/header.gif" id="kitty" style="left: 50%;">
         <header>
             <h1>the devils' den</h1>
         </header>
