the css works now! art! wow!

--- a/art.html
+++ b/art.html
@@ -51,6 +51,10 @@
                     <li><a href="/gallery/misc3.html">Miscellaneous comics</a><br>
                     <strong>Content warnings: self-harm, gore, implied CSA</strong></li>
                 </ul>
+                <h3>Other stuff</h3>
+                <ul>
+                    <li><a href="/etc/ascii.txt">ASCII art</a></li>
+                </ul>
             </div>
             <!--Commissions-->
             <div id="commissions" class="tabcontent">
