--- a/gallery/illus2023.html
+++ b/gallery/illus2023.html
@@ -22,6 +22,9 @@
         </nav>
         <main>
             <!--<a href="/images/art/illustration/"><img src="/images/art/illustration/"></a>-->
+            <a href="/images/art/illustration/2023-drazmems.png"><img src="/images/art/illustration/2023-drazmems.png"></a>
+            <a href="/images/art/illustration/2023-party.png"><img src="/images/art/illustration/2023-party.png"></a>
+            <a href="/images/art/illustration/2023-popsicle.png"><img src="/images/art/illustration/2023-popsicle.png"></a>
             <a href="/images/art/illustration/2023-roots.png"><img src="/images/art/illustration/2023-roots.png"></a>
             <a href="/images/art/illustration/2023-pillows.png"><img src="/images/art/illustration/2023-pillows.png"></a>
             <a href="/images/art/illustration/2023-memschib.png"><img src="/images/art/illustration/2023-memschib.png"></a>
