--- a/funger.html
+++ b/funger.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>fear and hunger</title>
     <style>
-        body {
+        html {
             background-image: url(/images/funger/background.png);
             background-size: cover;
         }
