--- a/tamagotchi.html
+++ b/tamagotchi.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>tamagotchi graveyard</title>
     <style>
-        body {
+        html {
             background-image: url(/images/tamagotchi/background.png);
         }
 
