--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <h2>My corner of the digital hellscape</h2>
             <a href="/about.html"><img src="/images/totoro.gif" alt="About page" title="what?" style="float: right; margin-left: 10px;"></a>
             <p>In the overly corporate Web of today, this site remains as an escape from it all. There is no real message or intent- merely a space for me to fill with what I find meaningful.</p>
-            <!--Content advisory-->
+            <div class="halves">
+                <!--Content advisory-->
             <section style="margin-right: 15px;">
                 <h2>Content advisory</h2>
                 <div style="overflow: hidden;" class="box">
@@ -64,6 +65,7 @@
                     </div>
                 </div>
             </section>
+            </div>
             <p class="center"><a href="/rss.xml">RSS</a> & <a href="https://yourdevilfriends.123guestbook.com/">guestbook</a></p>
         </main>
         <footer>
