yume nikki shrine

--- a/yn.html
+++ b/yn.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <title>the devils' shrines</title>
+    <title>yume nikki gallery</title>
+    <style>
+        html {
+            background-image: url(/images/yume-nikki/background.png);
+        }
+
+        #contain {
+            background-color: #333333dd;
+        }
+    </style>
 </head>
 <body>
     <div id="contain">
-        <img src="/images/header.gif" id="kitty">
+        <img src="/images/yume-nikki/header.gif" id="kitty" style="left: 65%;">
         <header>
             <h1>the devils' den</h1>
         </header>
@@ -20,11 +29,14 @@
             <a href="/links.html"><button>Links</button></a>
         </nav>
         <main>
-            <ul>
-                <li><h3><a href="/yn.html">Yume Nikki gallery</a></h3></li>
-                <li><h3><a href="/funger.html">Fear and Hunger shrine</a></h3></li>
-                <li><h3><a href="/tamagotchi.html">Tamagotchi graveyard</a></h3></li>
-            </ul>
+            <h2>Yume Nikki gallery</h2>
+            <p>Yume Nikki has been extremely influential to my work and is very important to me. Here are some screenshots from the game.</p>
+            <!--<img src="/images/yume-nikki/" class="center">-->
+            <img src="/images/yume-nikki/screenshot3.png" class="center">
+            <br>
+            <img src="/images/yume-nikki/screenshot2.png" class="center">
+            <br>
+            <img src="/images/yume-nikki/screenshot1.png" class="center">
         </main>
         <footer>
             <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
