new yume niki images

--- a/yn.html
+++ b/yn.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/gallery_style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>yume nikki gallery</title>
     <style>
@@ -31,12 +32,16 @@
         <main>
             <h2>Yume Nikki gallery</h2>
             <p>Yume Nikki has been extremely influential to my work and is very important to me. Here are some screenshots from the game.</p>
-            <!--<img src="/images/yume-nikki/" class="center">-->
-            <img src="/images/yume-nikki/screenshot3.png" class="center">
-            <br>
-            <img src="/images/yume-nikki/screenshot2.png" class="center">
-            <br>
-            <img src="/images/yume-nikki/screenshot1.png" class="center">
+            <!--<a href="/images/yume-nikki/"><img src="/images/yume-nikki/"></a>-->
+            <a href="/images/yume-nikki/screenshot9.png"><img src="/images/yume-nikki/screenshot9.png"></a>
+            <a href="/images/yume-nikki/screenshot8.png"><img src="/images/yume-nikki/screenshot8.png"></a>
+            <a href="/images/yume-nikki/screenshot7.png"><img src="/images/yume-nikki/screenshot7.png"></a>
+            <a href="/images/yume-nikki/screenshot6.png"><img src="/images/yume-nikki/screenshot6.png"></a>
+            <a href="/images/yume-nikki/screenshot5.png"><img src="/images/yume-nikki/screenshot5.png"></a>
+            <a href="/images/yume-nikki/screenshot4.png"><img src="/images/yume-nikki/screenshot4.png"></a>
+            <a href="/images/yume-nikki/screenshot3.png"><img src="/images/yume-nikki/screenshot3.png"></a>
+            <a href="/images/yume-nikki/screenshot2.png"><img src="/images/yume-nikki/screenshot2.png"></a>
+            <a href="/images/yume-nikki/screenshot1.png"><img src="/images/yume-nikki/screenshot1.png"></a>
         </main>
         <footer>
             <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
