--- a/writing.html
+++ b/writing.html
@@ -39,6 +39,7 @@
             <div id="poetry" class="tabcontent">
                 <h2>Poetry</h2>
                 <ul>
+                    <li><h3><a href="/fundo.html"><span lang="pt">Fundo</span> + English translation</a></h3></li>
                     <li><h3><a href="/the-king.html">The King</a></h3></li>
                     <li><h3><a href="/the-fall.html">The fall</a></h3></li>
                     <li><h3><a href="/world-at-war.html">World at war</a></h3></li>
