new yume nikki images, minor changes

--- a/dreamie.html
+++ b/dreamie.html
@@ -16,7 +16,7 @@
             <a href="/"><button>Home</button></a>
             <a href="/art.html"><button>Art</button></a>
             <a href="/writing.html"><button>Writing</button></a>
-            <a href="/shrines.html"><button>Shrines</button></a>
+            <a href="/fun.html"><button>Fun</button></a>
             <a href="/links.html"><button>Links</button></a>
         </nav>
         <main>
@@ -131,7 +131,7 @@
             <img src="/images/article-images/death-row.png" class="center" alt="Meme featuring a white girl reading «Lullabye is a Neocities user. She is part of the first season of Neocities drama and was one of the first four Neocities users to be executed on death row after being convicted of eating her whole family.">
         </main>
         <footer>
-            <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
+            <p>© nobody cares / hand-coded</p>
         </footer>
     </div>
 </body>
