--- a/funger.html
+++ b/funger.html
@@ -26,7 +26,7 @@
             <a href="/"><button>Home</button></a>
             <a href="/art.html"><button>Art</button></a>
             <a href="/writing.html"><button>Writing</button></a>
-            <a href="/shrines.html"><button>Shrines</button></a>
+            <a href="/fun.html"><button>Fun</button></a>
             <a href="/links.html"><button>Links</button></a>
         </nav>
         <main>
@@ -51,7 +51,7 @@
             <p>Studying the maps of the game is crucial, both in and off-game. I usually try to familiarize myself with the layouts provided in the wiki, which do tell you where the items and traps are (you'll probably forget these spots in your actual playthrough if you're like me though), but the most important part is figuring out how the mazelike maps look like. The spots where the traps and items are are things that you naturally remember the more you play the games.</p>
         </main>
         <footer>
-            <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
+            <p>© nobody cares / hand-coded</p>
         </footer>
     </div>
 </body>
