--- a/yn.html
+++ b/yn.html
@@ -26,13 +26,19 @@
             <a href="/"><button>Home</button></a>
             <a href="/art.html"><button>Art</button></a>
             <a href="/writing.html"><button>Writing</button></a>
-            <a href="/shrines.html"><button>Shrines</button></a>
+            <a href="/fun.html"><button>Fun</button></a>
             <a href="/links.html"><button>Links</button></a>
         </nav>
         <main>
             <h2>Yume Nikki gallery</h2>
             <p>Yume Nikki has been extremely influential to my work and is very important to me. Here are some screenshots from the game.</p>
             <!--<a href="/images/yume-nikki/"><img src="/images/yume-nikki/"></a>-->
+            <a href="/images/yume-nikki/screenshot15.png"><img src="/images/yume-nikki/screenshot15.png"></a>
+            <a href="/images/yume-nikki/screenshot14.png"><img src="/images/yume-nikki/screenshot14.png"></a>
+            <a href="/images/yume-nikki/screenshot13.png"><img src="/images/yume-nikki/screenshot13.png"></a>
+            <a href="/images/yume-nikki/screenshot12.png"><img src="/images/yume-nikki/screenshot12.png"></a>
+            <a href="/images/yume-nikki/screenshot11.png"><img src="/images/yume-nikki/screenshot11.png"></a>
+            <a href="/images/yume-nikki/screenshot10.png"><img src="/images/yume-nikki/screenshot10.png"></a>
             <a href="/images/yume-nikki/screenshot9.png"><img src="/images/yume-nikki/screenshot9.png"></a>
             <a href="/images/yume-nikki/screenshot8.png"><img src="/images/yume-nikki/screenshot8.png"></a>
             <a href="/images/yume-nikki/screenshot7.png"><img src="/images/yume-nikki/screenshot7.png"></a>
@@ -44,7 +50,7 @@
             <a href="/images/yume-nikki/screenshot1.png"><img src="/images/yume-nikki/screenshot1.png"></a>
         </main>
         <footer>
-            <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
+            <p>© nobody cares / hand-coded</p>
         </footer>
     </div>
 </body>
