--- a/404.html
+++ b/404.html
@@ -16,14 +16,14 @@
             <a href="/"><button>Home</button></a>
             <a href="/art.html"><button>Art</button></a>
             <a href="/writing.html"><button>Writing</button></a>
-            <a href="/shrines.html"><button>Shrines</button></a>
+            <a href="/fun.html"><button>Fun</button></a>
             <a href="/links.html"><button>Links</button></a>
         </nav>
         <main>
             <h2 class="yell">I'm working on it!!!!</h2>
         </main>
         <footer>
-            <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
+            <p>© nobody cares / hand-coded</p>
         </footer>
     </div>
 </body>
