--- a/accessibility.html
+++ b/accessibility.html
@@ -40,7 +40,7 @@
             <a href="/"><button>Home</button></a>
             <a href="/art.html"><button>Art</button></a>
             <a href="/writing.html"><button>Writing</button></a>
-            <a href="/shrines.html"><button>Shrines</button></a>
+            <a href="/fun.html"><button>Fun</button></a>
             <a href="/links.html"><button>Links</button></a>
         </nav>
         <main>
@@ -204,7 +204,7 @@ filter: none;
             <p>Many thanks to <a href="https://owly.fans/">Cass</a> for pointing out many of these issues to me, and to <a href="https://solaria.neocities.org/">Solaria</a> for letting me link their readability guide.</p>
         </main>
         <footer>
-            <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
+            <p>© nobody cares / hand-coded</p>
         </footer>
     </div>
 </body>
