--- a/gallery/pixel2021.html
+++ b/gallery/pixel2021.html
@@ -22,7 +22,7 @@
             <a href="/"><button>Home</button></a>
             <a href="/art.html"><button>Art</button></a>
             <a href="/writing.html"><button>Writing</button></a>
-            <a href="/shrines.html"><button>Shrines</button></a>
+            <a href="/fun.html"><button>Fun</button></a>
             <a href="/links.html"><button>Links</button></a>
         </nav>
         <main>
@@ -35,7 +35,7 @@
             <a href="/images/art/pixel/2021-cat.gif"><img src="/images/art/pixel/2021-cat.gif"></a>
         </main>
         <footer>
-            <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
+            <p>© nobody cares / hand-coded</p>
         </footer>
     </div>
 </body>
