--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="/"><button>Home</button></a>
             <a href="/art.html"><button>Art</button></a>
             <a href="/writing.html"><button>Writing</button></a>
-            <a href="/shrines.html"><button>Shrines</button></a>
+            <a href="/fun.html"><button>Fun</button></a>
             <a href="/links.html"><button>Links</button></a>
         </nav>
         <main>
@@ -69,7 +69,7 @@
             <p class="center"><a href="/rss.xml">RSS</a> & <a href="https://yourdevilfriends.123guestbook.com/">guestbook</a></p>
         </main>
         <footer>
-            <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
+            <p>© nobody cares / hand-coded</p>
         </footer>
     </div>
 </body>
