--- a/the-king.html
+++ b/the-king.html
@@ -16,7 +16,7 @@
             <a href="/"><button>Home</button></a>
             <a href="/art.html"><button>Art</button></a>
             <a href="/writing.html"><button>Writing</button></a>
-            <a href="/shrines.html"><button>Shrines</button></a>
+            <a href="/fun.html"><button>Fun</button></a>
             <a href="/links.html"><button>Links</button></a>
         </nav>
         <main>
@@ -37,7 +37,7 @@
             <p>The cold approaches with people outside, and we hide them under tourist traps.</p>
         </main>
         <footer>
-            <p>© nobody cares / hand-coded / hosted on <a href="https://github.com/">GitHub</a></p>
+            <p>© nobody cares / hand-coded</p>
         </footer>
     </div>
 </body>
