--- a/links.html
+++ b/links.html
@@ -40,6 +40,10 @@
                 </div>
                 <h3>Lovely sites</h3>
                 <div class="center">
+                    <a href="https://yurasys.neocities.org/"><img src="/images/buttons/yurasys.png" alt="Yurasys" style="width: 88px;"></a>
+                    <a href="https://nickolox.neocities.org/"><img src="/images/buttons/nickolox.gif" alt="Nickolox's Web Corner"></a>
+                    <a href="https://zenmai.neocities.org/"><img src="/images/buttons/zenmai.gif" alt="Zenmai Studio"></a>
+                    <a href="https://madville.neocities.org/"><img src="/images/buttons/madville.gif" alt="Madville"></a>
                     <a href="http://allaboutfrogs.org"><img src="/images/buttons/allaboutfrogs.gif" alt="Frogland"></a>
                     <a href="https://amriel.neocities.org/"><img src="/images/buttons/amriel.png" alt="Amriel"></a>
                     <a href="https://avgfilms.neocities.org/"><img src="/images/buttons/avgfilms.png" alt="AVGFilms"></a>
